[tool.poetry]
name = "launch-ml-jobs-on-gcp"
version = "0.1.0"
description = ""
authors = ["qaicodes <153209963+qaicodes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
